--- a/index.html
+++ b/index.html
@@ -8,31 +8,19 @@
       text-decoration: none;
     }
 
-    body::before,
-    body::after {
-      content: "";
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      width: 150px;
-      background-repeat: repeat-y;
-      background-size: auto 100%;
+    body {
       background-color: black;
+      margin: 0;
+      padding: 0;
     }
 
-    body::before {
-      left: 0;
-    }
-
-    body::after {
-      right: 0;
-    }
-
-    .image-container {
+    .main-container {
       display: flex;
-      justify-content: center;
       align-items: center;
-      margin-top: 50px;
+      margin: 0 auto;
+      max-width: 960px;
+      padding: 30px;
+      background-color: white;
     }
 
     img {
@@ -69,7 +57,7 @@
   <title>Sergio Thompson</title>
 </head>
 <body>
-<div class="image-container">
+<div class="main-container">
   <div class="links-left">
     <div class="link-container">
       <a href="#">Music</a>
