--- a/logan-method/index.html
+++ b/logan-method/index.html
@@ -20,7 +20,7 @@
             document.getElementById("output").innerHTML = outputText;
         }
 
-        function handleKeyDown(event) {
+        function handleKeyDown() {
                 updateOutput();
         }
 
